--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -1,6 +1,7 @@
 {
   "APP_NAME": "ngX-Rocket",
   "About": "About",
+  "Categories": "Categories",
   "Hello world !": "Hello world !",
   "Home": "Home",
   "Logged in as": "Logged in as",
