Adding "All Products" options next to categories.

--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -1,6 +1,7 @@
 {
   "APP_NAME": "ngX-Rocket",
   "About": "About",
+  "AllProducts": "All Products",
   "Categories": "Categories",
   "Hello world !": "Hello world !",
   "Home": "Home",
